# Seamless

./: .env.example  .gitignore  CLAUDE.md  README.md  Readme.md  kroger_search.py  pyproject.toml  requirements.txt  videodb.ipynb  videodb2.ipynb
dedalus_mcp_server/: .gitignore  main.py  server.py  test_server.py
dedalus_mcp_server/scrapers/: __init__.py
dedalus_mcp_server/tools/: cart_management.py  product_search.py  web_search.py
frontend/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: video
frontend/scripts/: snowflake-movies.cjs
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ContentRow.tsx  HeroBanner.tsx  Navbar.tsx  ThumbnailImage.tsx  UserSwitchToast.tsx  (+2 more)
landing-page/: architecture.css  architecture.html  index.html  styles.css
outputs/: BBS3E2_structured_products.json  STS3E4_structured_products.json  bbs3e2_scene_and_transcript.json  bbs3e2_transcript.json  sts3e4_scene_and_transcript.json  sts3e4_transcript.json
scrapers/: generic_patterns.py
scripts/: load_structured_products_to_snowflake.py
seamless_ads/: THUMBNAIL_SETUP.md  __init__.py  __main__.py  cli.py  create_table.py  kroger_search.py  mcp_agent.py  metadata.py  recommender.py  schemas.py  server.py  service.py  thumbnail_storage.sql  upload_thumbnail.py  user_profiles.py
seamless_ads/samples/: scene_1.json  scene_2.json  user_1.json  user_a.json  user_b.json
tests/: test_seamless_ads.py
tools/: __init__.py  discover_product.py
(+9 files in other folders)
